--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>fast typer</title>
+        <title>fast-typer</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
